--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "dependencies": {
     "commander": "^12.1.0",
     "yaml": "^2.4.2"
+  },
+  "devDependencies": {
+    "lodash": "^4.17.21"
   }
 }
