--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,20 @@
   },
   "homepage": "https://github.com/IvanOldMan/frontend-project-46#readme",
   "dependencies": {
+    "@jest/globals": "^29.7.0",
     "commander": "^12.1.0",
     "yaml": "^2.4.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@eslint/js": "^9.3.0",
+    "@jest/globals": "^29.7.0",
+    "babel-jest": "^29.7.0",
+    "eslint": "^9.3.0",
+    "globals": "^15.3.0",
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
     "lodash": "^4.17.21"
   }
 }
