final_step: fix

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "gendiff": "bin/gendiff.js"
   },
   "type": "module",
+  "simple-git-hooks": {
+    "pre-push": "make lint"
+  },
   "scripts": {
     "test": "npx jest"
   },
@@ -45,6 +48,7 @@
     "globals": "^15.3.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "simple-git-hooks": "^2.11.1"
   }
 }
