--- a/package.json
+++ b/package.json
@@ -26,26 +26,26 @@
   "dependencies": {
     "@jest/globals": "^29.7.0",
     "commander": "^12.1.0",
-    "yaml": "^2.4.2"
+    "yaml": "^2.4.2",
+    "globals": "^15.3.0",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.4.0",
+    "eslint-plugin-import": "^2.29.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
     "@eslint/create-config": "^1.0.0",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.4.0",
     "@jest/globals": "^29.7.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "globals": "^15.3.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
     "lodash": "^4.17.21",
